--- a/index.html
+++ b/index.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilo.css">
+    <link href="https://fonts.googleapis.com/css?family=Zhi+Mang+Xing&display=swap" rel="stylesheet">
     <title>Examen 2ª EV</title>
 </head>
 <body>
-    
+    <header>
+        <h1>we are colours</h1>
+    </header>
+
+    <main>
+        <article class="Uno">
+            <table>
+                <tr>
+        <td><a href="https://en.wikipedia.org/wiki/Lists_of_colors">Red</a></td>
+        <td><a href="https://en.wikipedia.org/wiki/Lists_of_colors">Green</a></td>
+        <td><a href="https://en.wikipedia.org/wiki/Lists_of_colors">Blue</a></td>
+        <td><a href="https://en.wikipedia.org/wiki/Lists_of_colors">Yellow</a></td>
+        <td><a href="https://en.wikipedia.org/wiki/Lists_of_colors">Black</a></td>
+                </tr>
+            </table>
+        </article>
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
