--- a/index.html
+++ b/index.html
@@ -14,13 +14,40 @@
 
     <main>
         <article class="Uno">
-            <table>
+            <ul class="color">
+               <li class="color"><a class="rojo" href="https://en.wikipedia.org/wiki/Lists_of_colors">Red</a></li>
+               <li class="color"><a href="https://en.wikipedia.org/wiki/Lists_of_colors">Green</a></li>
+               <li class="color"><a href="https://en.wikipedia.org/wiki/Lists_of_colors">Blue</a></li>
+               <li class="color"><a href="https://en.wikipedia.org/wiki/Lists_of_colors">Yellow</a></li>
+               <li class="color"><a href="https://en.wikipedia.org/wiki/Lists_of_colors">Black</a></li>
+            </ul>
+            <br>
+            
+            <section>
+                <h2>Colours</h2>
+                <p>We know a lot of colours</p>
+                <ol>
+                    <li>Red</li> <br>
+                    <li>Green</li> <br>
+                    <li>Blue</li> <br>
+                    <li>Yellow</li> <br>
+                    <li>Black</li> <br>
+                </ol>
+            </section>
+        </article>
+        <article class="Dos">
+            <h2>Tests colours</h2>
+            <p>Introduce el nombre del color</p>
+            <table class="Dos" border 2px>
                 <tr>
-        <td><a href="https://en.wikipedia.org/wiki/Lists_of_colors">Red</a></td>
-        <td><a href="https://en.wikipedia.org/wiki/Lists_of_colors">Green</a></td>
-        <td><a href="https://en.wikipedia.org/wiki/Lists_of_colors">Blue</a></td>
-        <td><a href="https://en.wikipedia.org/wiki/Lists_of_colors">Yellow</a></td>
-        <td><a href="https://en.wikipedia.org/wiki/Lists_of_colors">Black</a></td>
+                    <td>1</td>
+                    <td>colour</td>
+                    <td><form method="GET"><p><input type="text" name="color" size="30"></p></form></td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>colour</td>
+                    <td><form method="GET"><p><input type="text" name="color" size="30"></p></form></td>
                 </tr>
             </table>
         </article>
