--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                 </tr>
             </table>
         </article>
+        <p class="Colores">Los colores son bonitos</p>
     </main>
 
     <footer>
